# music-streamer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  main.py  readme  requirements.txt  vcpkg.json
midi/: 2.mid  pop_solo.mid
